--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ DB_POSTGRES_PASSWORD =
 DB_POSTGRES_DB_NAME =
 DB_POSTGRES_DB_HOST =
 DB_POSTGRES_DB_PORT =
+
+EMAIL_HOST =
+EMAIL_PORT =
+EMAIL_HOST_USER =
+EMAIL_HOST_PASSWORD =
