--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ EMAIL_HOST =
 EMAIL_PORT =
 EMAIL_HOST_USER =
 EMAIL_HOST_PASSWORD =
+
+DATABASE_URL=postgres://<DB_POSTGRES_USERNAME>:<DB_POSTGRES_PASSWORD>@<DB_POSTGRES_DB_HOST>:<DB_POSTGRES_DB_PORT>/<DB_POSTGRES_DB_NAME>
